<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Blogfy</string>
    <!-- Hint -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_current_password">Current password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_confirm_new_password">Confirm new password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <!-- Action Menu -->
    <string name="edit">Edit</string>
    <!-- Dialog Strings -->
    <string name="dialog_loading">Loading…</string>
    <string name="confirm_sign_out">Clear user data?</string>
    <string name="confirm_delete_blog">Confirm delete?</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="ok">OK</string>
    <string name="sign_out_confirmation_message">You will have to reconnect your blogfy account </string>
    <string name="delete_blog_message">Are you sure? </string>
    <string name="discard_changes_message">You have unsaved changes that will be lost. </string>
    <!-- Text -->
    <string name="text_welcome">Welcome to Blogfy</string>
    <string name="text_sign_in">Sign in to continue.</string>
    <string name="text_sign_up">Sign up for Blogfy account.</string>
    <string name="text_sign_up_email">Sign up with email</string>
    <string name="text_create_account">Don\'t have an account? SIGN UP</string>
    <string name="text_continue">Continue</string>
    <string name="text_or">or</string>
    <string name="text_google_sign_in">Sign in with your google account</string>
    <string name="text_google_continue">Continue with Google</string>
    <string name="text_email_continue">Continue with Email</string>
    <string name="text_feed">Feed</string>
    <string name="text_blog_title">Title</string>
    <string name="text_blog_description">Description:</string>
    <string name="text_blog_author">Author</string>
    <string name="text_search">Search</string>
    <string name="text_account">Account</string>
    <string name="text_create_blog">Create blog</string>
    <string name="text_update_description">Describe your blog…</string>
    <string name="text_your_email">Your email</string>
    <string name="text_your_username">Your username</string>
    <string name="text_email">Email</string>
    <string name="text_username">username</string>
    <string name="text_change_password">Update password</string>
    <string name="text_sign_out">Sign out</string>
    <string name="text_blog_image">Blog image</string>
    <string name="text_application_logo">Application logo</string>
    <string name="text_blog_image_divider">Image divider</string>
    <string name="search">Search</string>
    <string name="initial_search_message_text">Use the above search field to find blogs!</string>
    <string name="password">Password</string>
    <string name="close_updating_password">close updating password</string>
    <string name="confirm_password_update">confirm password update</string>
    <string name="blog_date_updated">Date: 2021–12–12 Time: 07:46:49</string>
    <string name="delete">Delete blog</string>
    <string name="search_item">search item</string>
    <string name="clear_search_suggestions">Clear search suggestions</string>
    <string name="clear_search_suggestion_item">Clear search suggestion item</string>
</resources>