<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler_view_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/blog_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/text_blog_image"
            android:scaleType="centerCrop"
            android:transitionName="@string/text_blog_image"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/blog_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginEnd="@dimen/dimen_16"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.Blogfy.Custom1"
            tools:text="@string/text_blog_title" />

        <TextView
            android:id="@+id/blog_author_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.Blogfy.Body2"
            tools:text="@string/text_blog_author" />

        <TextView
            android:id="@+id/blog_update_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginBottom="@dimen/dimen_8"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.Blogfy.Body1"
            tools:text="@string/blog_date_updated" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>