<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="@dimen/dimen_16"
    android:paddingTop="@dimen/dimen_8"
    tools:context="com.zlagi.blogfy.view.account.detail.AccountDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/background"
            app:expandedTitleMarginStart="0dp"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:statusBarScrim="@color/background">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/background"
                app:layout_collapseMode="pin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_account"
                android:paddingTop="@dimen/dimen_48"
                style="@style/TextAppearance.Blogfy.Custom6" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/search_container_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/dimen_48"
                android:layout_height="@dimen/dimen_48"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/username_input_layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:padding="@dimen/dimen_16"
                app:helperText="@string/text_email"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias=".1">

                <TextView
                    android:id="@+id/email_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_your_email"
                    android:textColor="@color/reply_black_900"
                    android:textSize="@dimen/size_20"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/email_input_layout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/update_password_text_view"
                android:padding="@dimen/size_16"
                app:helperText="@string/text_username"
                android:id="@+id/username_input_layout">

                <TextView
                    android:id="@+id/username_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_your_username"
                    android:textColor="@color/reply_black_900"
                    android:textSize="@dimen/size_20"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/update_password_text_view"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_change_password"
                android:textColor="@color/link_blue"
                android:textSize="@dimen/size_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_input_layout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_out_button"
                style="@style/SignOutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/dimen_48"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_48"
                android:layout_marginBottom="@dimen/dimen_64"
                android:text="@string/text_sign_out"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/update_password_text_view"
                app:layout_constraintVertical_bias="0.2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
