<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_container_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:paddingHorizontal="@dimen/dimen_4"
    android:paddingTop="@dimen/dimen_8"
    tools:context="com.zlagi.blogfy.view.account.update.UpdatePasswordFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/update_password_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16">

            <ImageButton
                android:id="@+id/cancel_update_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/close_updating_password"
                android:padding="@dimen/dimen_12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_clear_24"
                app:tint="@color/grey2"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/password_text_view"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:minHeight="@dimen/dimen_48"
                android:textAppearance="@style/TextAppearance.Blogfy.Custom1"
                android:textColorHint="@color/reply_black_800"
                app:layout_constraintEnd_toStartOf="@+id/confirm_update_password_button"
                app:layout_constraintStart_toEndOf="@id/cancel_update_password_button"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <ImageButton
                android:id="@+id/confirm_update_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_12"
                android:layout_marginEnd="@dimen/dimen_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/confirm_password_update"
                android:background="?attr/actionBarItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:tint="?attr/colorPrimary"
                app:srcCompat="@drawable/ic_check_green_24dp" />

            <ImageView
                android:id="@+id/blog_title_divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:background="@drawable/divider"
                app:backgroundTint="@color/colorPrimary"
                android:contentDescription="@string/text_blog_image_divider" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/current_password_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24"
                android:layout_marginTop="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_24"
                android:hint="@string/hint_current_password"
                android:textColorHint="@color/reply_black_700"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/new_password_input_text_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blog_title_divider">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/current_password_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_input_text_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24"
                android:layout_marginTop="@dimen/dimen_8"
                android:layout_marginEnd="@dimen/dimen_24"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                android:hint="@string/hint_new_password"
                android:textColorHint="@color/reply_black_700"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_password_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_new_password_input_text_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24"
                android:layout_marginTop="@dimen/dimen_8"
                android:layout_marginEnd="@dimen/dimen_24"
                android:hint="@string/hint_confirm_new_password"
                android:textColorHint="@color/reply_black_700"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_password_input_text_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_new_password_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>