<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionName="shared_element">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/blog_details_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/blog_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/text_blog_image"
                android:foreground="@drawable/blog_detail_image_scream"
                android:scaleType="centerCrop"
                android:transitionName="blog_detail_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_back_arrow">

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:id="@+id/blog_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/blog_image_view">

                <TextView
                    android:id="@+id/blog_title_text_view"
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/dimen_12"
                    android:textAppearance="@style/TextAppearance.Blogfy.Custom1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/text_blog_title"
                    tools:ignore="InefficientWeight" />


                <ImageButton
                    android:id="@+id/blog_options_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/actionBarItemBackground"
                    android:contentDescription="@string/delete"
                    android:padding="@dimen/dimen_12"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_more_vert_24" />

            </LinearLayout>

            <TextView
                android:id="@+id/blog_description_text_view"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:gravity="start"
                android:padding="@dimen/dimen_16"
                android:text="@string/text_blog_description"
                android:textAppearance="@style/TextAppearance.Blogfy.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/blog_title_layout"
                tools:text="@string/text_blog_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
